--- a/dnd/css/style.css
+++ b/dnd/css/style.css
@@ -7,9 +7,17 @@
   box-sizing: border-box;
 }
 
+
 /******************************************
 /* LAYOUT
 /*******************************************/
+.button{
+  background: rgb(125, 196, 125);
+  border: 2px solid rgb(85, 85, 188);
+  border-radius: 3px;
+  color: white;
+  box-shadow: 5px 3px 5px 2px rgb(193, 145, 145);
+}
 img{
   display: block;
   margin: 0 auto;
